--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -78,13 +78,6 @@
                       </span>
                     <% end %>
 
-                    <%# Investment activity label badge %>
-                    <% if transaction.investment_activity_label.present? %>
-                      <span class="inline-flex items-center px-1.5 py-0.5 rounded text-xs font-medium bg-alpha-black-50 text-secondary" title="<%= t("transactions.transaction.activity_type_tooltip") %>">
-                        <%= t("transactions.activity_labels.#{transaction.investment_activity_label.parameterize(separator: '_')}") %>
-                      </span>
-                    <% end %>
-
                     <%# Pending indicator %>
                     <% if transaction.pending? %>
                       <span class="inline-flex items-center gap-1 text-xs font-medium rounded-full px-1.5 py-0.5 border border-secondary text-secondary" title="<%= t("transactions.transaction.pending_tooltip") %>">
@@ -144,7 +137,12 @@
       </div>
 
       <div class="hidden md:flex items-center gap-1 col-span-2">
-        <%= render "transactions/transaction_category", transaction: transaction, variant: "desktop" %>
+        <% if entry.account.investment? && !transaction.transfer? %>
+          <%# For investment accounts, show activity label instead of category %>
+          <%= render "investment_activity/quick_edit_badge", entry: entry, entryable: transaction %>
+        <% else %>
+          <%= render "transactions/transaction_category", transaction: transaction, variant: "desktop" %>
+        <% end %>
       </div>
 
       <div class="shrink-0 col-span-4 lg:col-span-2 ml-auto text-right">
