--- a/app/views/shared/notifications/_cta.html.erb
+++ b/app/views/shared/notifications/_cta.html.erb
@@ -1,7 +1,11 @@
 <%# locals: (message:, description:) %>
 
 <div id="cta">
-  <%= tag.div class: "relative flex gap-3 rounded-lg bg-container p-4 group w-full md:max-w-80 shadow-border-xs", data: { controller: "element-removal" } do %>
+  <%= tag.div class: "relative flex gap-3 rounded-lg bg-container p-4 group w-full md:max-w-80 shadow-border-xs transition-all duration-300 ease-out opacity-0 translate-y-[-8px]",
+              data: {
+                controller: "element-removal",
+                action: "animationend->element-removal#remove"
+              } do %>
     <div class="h-5 w-5 shrink-0 p-px text-primary">
       <div class="flex h-full items-center justify-center rounded-full bg-success fg-inverse">
         <%= icon "check", size: "xs", color: "current" %>
