--- a/app/views/layouts/shared/_htmldoc.html.erb
+++ b/app/views/layouts/shared/_htmldoc.html.erb
@@ -22,7 +22,7 @@
       <div id="notification-tray" class="space-y-1 w-full">
         <%= render_flash_notifications %>
 
-        <div id="cta"></div>
+        <%= render_flash_cta %>
       </div>
     </div>
 
