--- a/app/views/shared/notifications/_alert.html.erb
+++ b/app/views/shared/notifications/_alert.html.erb
@@ -1,10 +1,7 @@
 <%# locals: (message:) %>
 
 <%= tag.div class: "flex gap-3 rounded-lg bg-container p-4 group w-full md:max-w-80 shadow-border-lg transition-all duration-300 ease-out opacity-0 translate-y-[-8px]",
-            data: {
-              controller: "element-removal",
-              action: "animationend->element-removal#remove"
-            } do %>
+            data: { controller: "element-removal" } do %>
   <div class="h-5 w-5 shrink-0 p-px text-primary">
     <div class="flex h-full items-center justify-center rounded-full bg-destructive">
       <%= icon "x", size: "xs", color: "white" %>
