--- a/app/views/shared/notifications/_cta.html.erb
+++ b/app/views/shared/notifications/_cta.html.erb
@@ -1,24 +1,23 @@
 <%# locals: (message:, description:) %>
 
-<div id="cta">
-  <%= tag.div class: "relative flex gap-3 rounded-lg bg-container p-4 group w-full md:max-w-80 shadow-border-xs transition-all duration-300 ease-out opacity-0 translate-y-[-8px]",
-              data: {
-                controller: "element-removal",
-                action: "animationend->element-removal#remove"
-              } do %>
-    <div class="h-5 w-5 shrink-0 p-px text-primary">
-      <div class="flex h-full items-center justify-center rounded-full bg-success fg-inverse">
-        <%= icon "check", size: "xs", color: "current" %>
-      </div>
+<%= tag.div id: "cta", class: "relative flex gap-3 rounded-lg bg-container p-4 group w-full md:max-w-80 shadow-border-lg transition-all duration-300 ease-out opacity-0 translate-y-[-8px]",
+            data: { controller: "element-removal" } do %>
+  <div class="h-5 w-5 shrink-0 p-px text-primary">
+    <div class="flex h-full items-center justify-center rounded-full bg-success fg-inverse">
+      <%= icon "check", size: "xs", color: "current" %>
+    </div>
+  </div>
+
+  <div class="space-y-4">
+    <div class="space-y-1">
+      <%= tag.p message, class: "text-primary text-sm font-medium" %>
+      <%= tag.p description, class: "text-secondary text-sm" %>
     </div>
 
-    <div class="space-y-4">
-      <div class="space-y-1">
-        <%= tag.p message, class: "text-primary text-sm font-medium" %>
-        <%= tag.p description, class: "text-secondary text-sm" %>
-      </div>
+    <%= yield %>
+  </div>
 
-      <%= yield %>
-    </div>
-  <% end %>
-</div>
+  <div class="absolute -top-2 -right-2">
+    <%= icon "x", class: "p-0.5 hidden group-hover:inline-block border border-alpha-black-50 border-solid rounded-lg bg-container text-subdued cursor-pointer", data: { action: "click->element-removal#remove" } %>
+  </div>
+<% end %>
