--- a/app/views/subscriptions/upgrade.html.erb
+++ b/app/views/subscriptions/upgrade.html.erb
@@ -36,7 +36,7 @@
       <span class="text-secondary">today</span>
     </h2>
 
-    <p class="text-sm text-secondary mb-8">To continue using Sure pick a plan below.</p>
+    <p class="text-sm text-secondary mb-8">To continue supporting the development of this codebase, pick a plan below.</p>
 
     <%= form_with url: new_subscription_path, method: :get, class: "max-w-xs", data: { turbo: false } do |form| %>
       <div class="space-y-4 mb-6">
