--- a/app/views/holdings/index.html.erb
+++ b/app/views/holdings/index.html.erb
@@ -14,7 +14,7 @@
     </div>
 
     <div class="bg-container-inset rounded-xl p-1 overflow-x-auto">
-      <div class="w-max">
+      <div class="w-max lg:w-full">
         <div class="grid grid-cols-12 items-center uppercase text-xs font-medium text-secondary px-4 py-2">
           <%= tag.p t(".name"), class: "col-span-4" %>
           <%= tag.p t(".weight"), class: "col-span-2 justify-self-end" %>
