Extract hardcoded strings from ERB views to i18n
- Translate text in categories, chats, rules, tags, subscriptions views
- Add i18n keys to transaction filters (account, merchant, tag, category, date)
- Update search form with translation keys
- Create family_merchants locale file
- Update chats locale with error, chat, chat_nav keys
- Add rules index keys (title, delete_all, sort, empty states)

--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -14,14 +14,14 @@
   <%= render DS::Menu.new(icon_vertical: true) do |menu| %>
     <% menu.with_item(
       variant: "link",
-      text: "Edit chat title",
+      text: t('.edit_title'),
       href: edit_chat_path(chat, ctx: "list"),
       icon: "pencil",
       frame: dom_id(chat, "title")) %>
 
     <% menu.with_item(
       variant: "button",
-      text: "Delete chat",
+      text: t('.delete'),
       href: chat_path(chat),
       icon: "trash-2",
       method: :delete,
