--- a/app/views/imports/_ready.html.erb
+++ b/app/views/imports/_ready.html.erb
@@ -8,8 +8,8 @@
 <div class="mx-auto max-w-2xl space-y-4">
   <div class="bg-container-inset rounded-xl p-1 space-y-1">
     <div class="flex justify-between items-center text-xs font-medium text-secondary uppercase px-5 py-3">
-      <p>item</p>
-      <p class="justify-self-end">count</p>
+      <p><%= t('.item') %></p>
+      <p class="justify-self-end"><%= t('.count') %></p>
     </div>
 
     <div class="bg-container shadow-border-xs rounded-lg text-sm">
@@ -35,5 +35,5 @@
     </div>
   </div>
 
-  <%= render DS::Button.new(text: "Publish import", href: publish_import_path(import), full_width: true) %>
+  <%= render DS::Button.new(text: t('.publish'), href: publish_import_path(import), full_width: true) %>
 </div>
