--- a/app/views/transactions/searches/filters/_date_filter.html.erb
+++ b/app/views/transactions/searches/filters/_date_filter.html.erb
@@ -1,11 +1,11 @@
 <%# locals: (form:) %>
 <div class="p-3">
   <%= form.date_field :start_date,
-                      placeholder: "Start date",
+                      placeholder: t('.start_date'),
                       value: @q[:start_date],
                       class: "block w-full border border-secondary rounded-md bg-container py-2 pl-3 pr-3  focus:ring-gray-500 sm:text-sm" %>
   <%= form.date_field :end_date,
-                      placeholder: "End date",
+                      placeholder: t('.end_date'),
                       value: @q[:end_date],
                       class: "block w-full border border-secondary rounded-md bg-container py-2 pl-3 pr-3  focus:ring-gray-500 sm:text-sm mt-2" %>
 </div>
