--- a/app/views/doorkeeper/authorizations/error.html.erb
+++ b/app/views/doorkeeper/authorizations/error.html.erb
@@ -14,7 +14,7 @@
 
   <div class="text-center">
     <%= render DS::Link.new(
-      text: "Go back",
+      text: t("doorkeeper.authorizations.error.go_back"),
       href: "javascript:history.back()",
       variant: :secondary
     ) %>
