--- a/app/views/loans/tabs/_overview.html.erb
+++ b/app/views/loans/tabs/_overview.html.erb
@@ -46,7 +46,7 @@
 
 <div class="flex justify-center py-8">
   <%= render DS::Link.new(
-    text: "Edit loan details",
+    text: t(".edit_loan_details"),
     variant: "ghost",
     href: edit_loan_path(account),
     frame: :modal
