--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -1,5 +1,5 @@
 <%= render DS::Dialog.new do |dialog| %>
-  <% dialog.with_header(title: "Enter property manually") %>
+  <% dialog.with_header(title: t(".enter_property_manually")) %>
   <% dialog.with_body do %>
     <div class="flex gap-4">
       <!-- Left sidebar with tabs -->
@@ -16,7 +16,7 @@
           <!-- Create button -->
           <div class="flex justify-end mt-4">
             <%= render DS::Button.new(
-              text: "Next",
+              text: t(".next"),
               variant: "primary",
             ) %>
           </div>
