Extract hardcoded strings from chat views to i18n
- Replace hardcoded strings in _ai_consent.html.erb with t() calls
- Replace hardcoded "New chat" in _chat_title.html.erb with t()
- Replace hardcoded "ago" in _chat.html.erb with interpolated t()
- Replace default message parameter in _thinking_indicator.html.erb with t()
- Add new i18n keys: thinking_indicator, ai_consent, chat_title, chat.updated_ago

--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -7,21 +7,21 @@
     <% end %>
 
     <p class="text-sm text-secondary">
-      <%= time_ago_in_words(chat.updated_at) %> ago
+      <%= t(".updated_ago", time: time_ago_in_words(chat.updated_at)) %>
     </p>
   </div>
 
   <%= render DS::Menu.new(icon_vertical: true) do |menu| %>
     <% menu.with_item(
       variant: "link",
-      text: t('.edit_title'),
+      text: t(".edit_title"),
       href: edit_chat_path(chat, ctx: "list"),
       icon: "pencil",
       frame: dom_id(chat, "title")) %>
 
     <% menu.with_item(
       variant: "button",
-      text: t('.delete'),
+      text: t(".delete"),
       href: chat_path(chat),
       icon: "trash-2",
       method: :delete,
