--- a/app/views/chats/_thinking_indicator.html.erb
+++ b/app/views/chats/_thinking_indicator.html.erb
@@ -1,4 +1,4 @@
-<%# locals: (chat:, message: "Thinking ...") -%>
+<%# locals: (chat:, message: t("chats.thinking_indicator.thinking")) -%>
 
 <div id="thinking-indicator" class="flex items-start gap-3">
   <%= render "chats/ai_avatar" %>
