Use I18n.l for date localization instead of strftime
Replace strftime("%B %d, %Y") and strftime("%B %Y") with I18n.l()
to properly localize date formatting including month names.

Files updated:
- reports/_budget_performance.html.erb
- reports/print.html.erb
- onboardings/trial.html.erb
- valuations/_confirmation_contents.html.erb
- settings/api_keys/created.html.erb
- settings/api_keys/created.turbo_stream.erb
- settings/billings/show.html.erb
- pages/changelog.html.erb

Also added pages.changelog.date_unavailable translation key.

--- a/app/views/onboardings/trial.html.erb
+++ b/app/views/onboardings/trial.html.erb
@@ -69,12 +69,12 @@
         </div>
 
         <div class="space-y-1.5 text-sm">
-          <p class="text-primary font-medium"><%= t('.in_13_days', date: 13.days.from_now.strftime("%B %d")) %></p>
+          <p class="text-primary font-medium"><%= t('.in_13_days', date: I18n.l(13.days.from_now, format: "%B %d")) %></p>
           <p class="text-secondary"><%= t('.in_13_days_description') %></p>
         </div>
 
         <div class="space-y-1.5 text-sm">
-          <p class="text-primary font-medium"><%= t('.in_14_days', date: 14.days.from_now.strftime("%B %d")) %></p>
+          <p class="text-primary font-medium"><%= t('.in_14_days', date: I18n.l(14.days.from_now, format: "%B %d")) %></p>
           <p class="text-secondary"><%= t('.in_14_days_description') %></p>
         </div>
       </div>
