--- a/app/views/reports/_budget_performance.html.erb
+++ b/app/views/reports/_budget_performance.html.erb
@@ -4,7 +4,7 @@
       <%= t("reports.budget_performance.title") %>
     </h2>
     <p class="text-sm text-tertiary">
-      <%= start_date.strftime("%B %Y") %>
+      <%= I18n.l(start_date, format: "%B %Y") %>
     </p>
   </div>
 
